# uplift

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml
app/: capabilities.py  config.py  csrf.py  database.py  logging_config.py  main.py  middleware.py  queries.py  seed.py
app/models/: __init__.py  product.py  score.py  tag.py
app/routes/: dashboard.py  dump.py  health.py  pages.py  products.py  scores.py  tags.py
app/services/: slack.py
app/static/css/: bootstrap.min.css  uplift.css
app/static/js/: chart-util.js
app/templates/layout/: base.html
app/templates/pages/: about.html  dashboard.html  docs.html  org_history.html
app/templates/products/: _form.html  _products.html  edit.html  index.html  new.html  show.html
app/templates/scores/: index.html  new.html  show.html
app/templates/tags/: edit.html  new.html
docs/: capabilities.md  pelorus-integration.md
tests/: conftest.py  test_csrf.py  test_models.py  test_queries.py  test_routes.py
